2010-09-05  Kent Tamura  <tkent@chromium.org>

        Unreviewed, test expectation update.

        * platform/chromium/drt_expectations.txt:
          Fix a duplication with test_expectations.txt in Chromium tree.

2010-09-05  Kent Tamura  <tkent@chromium.org>

        Unreviewed, test expectation update.

        * platform/chromium/drt_expectations.txt: Apply recent failures.

2010-09-05  Kent Tamura  <tkent@chromium.org>

        Unreviewed, test expectation update.

        Add svg/dynamic-update/ image results for Chromium-win and Chromium-linux.

        * platform/chromium-linux/svg/dynamic-updates/SVGCircleElement-dom-cx-attr-expected.checksum: Added.
        * platform/chromium-linux/svg/dynamic-updates/SVGCircleElement-dom-cx-attr-expected.png: Added.
        * platform/chromium-linux/svg/dynamic-updates/SVGCircleElement-dom-cy-attr-expected.checksum: Added.
        * platform/chromium-linux/svg/dynamic-updates/SVGCircleElement-dom-cy-attr-expected.png: Added.
        * platform/chromium-linux/svg/dynamic-updates/SVGCircleElement-dom-r-attr-expected.checksum: Added.
        * platform/chromium-linux/svg/dynamic-updates/SVGCircleElement-dom-r-attr-expected.png: Added.
        * platform/chromium-linux/svg/dynamic-updates/SVGCircleElement-svgdom-cx-prop-expected.checksum: Added.
        * platform/chromium-linux/svg/dynamic-updates/SVGCircleElement-svgdom-cx-prop-expected.png: Added.
        * platform/chromium-linux/svg/dynamic-updates/SVGCircleElement-svgdom-cy-prop-expected.checksum: Added.
        * platform/chromium-linux/svg/dynamic-updates/SVGCircleElement-svgdom-cy-prop-expected.png: Added.
        * platform/chromium-linux/svg/dynamic-updates/SVGCircleElement-svgdom-r-prop-expected.checksum: Added.
        * platform/chromium-linux/svg/dynamic-updates/SVGCircleElement-svgdom-r-prop-expected.png: Added.
        * platform/chromium-linux/svg/dynamic-updates/SVGClipPath-influences-hitTesting-expected.checksum: Added.