@@ -1,3 +1,15 @@
+2010-09-05  Peter Kasting  <pkasting@google.com>
+
+        Reviewed by Adam Barth.
+
+        Make Chromium/Mac generate continuous mousewheel events with the same wheelDelta values as Safari/Mac.
+        https://bugs.webkit.org/show_bug.cgi?id=45155
+
+        * fast/events/continuous-platform-wheelevent-in-scrolling-div-expected.txt:
+        * fast/events/continuous-platform-wheelevent-in-scrolling-div.html:
+        * platform/chromium/fast/events: Removed.
+        * platform/chromium/fast/events/continuous-platform-wheelevent-in-scrolling-div-expected.txt: Removed.
+
 2010-09-05  Kent Tamura  <tkent@chromium.org>
 
         Unreviewed, test expectation update.
